--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.7",
+    "@expo/vector-icons": "^15.0.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "expo": "^54.0.8",
+    "expo-constants": "^18.0.9",
+    "expo-file-system": "~19.0.14",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-hook-form": "^7.62.0",
+    "react-native": "^0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
