--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "target": "ES2020",
+    "module": "ESNext", // ✅ 'preserve' 대신 명시
+    "lib": ["ES2020"],
+    "jsx": "react-native",
+    "moduleResolution": "Bundler", // ✅ Expo/Metro 권장
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "strict": true,
+    "types": ["react", "react-native", "expo"]
   }
 }
